[package]
name = "fractal-wasm"
description = "WASM example with Mandelbrot fractal"
version = "0.2.0"
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.82"
fractal-rs = { version = "0.2", path="../fractal-rs"}
num = "0.4"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.59"
features = ["console", "HtmlCanvasElement", "Document", "Window", "CanvasRenderingContext2d", "ImageData", "Element"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.32"
futures = "0.3.23"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
